# PRO4500_Control_System-UV

./: .gitignore  .gitmodules  AGENTS.md  PRO4500.cpp  README.md  StructuredLightControlPanel.cpp  build.bat  build_native_control_panel.bat  camera_config.json  camera_provider.py  dlpc350_usb_standalone.cpp  generate_centered_patterns.ps1  prepare_pc_python_env.ps1  projector_usb_diagnostics.h  run_control_panel.bat  structured_light_pc_controller.py  ximea_camera_info.py
.venv-pc/: pyvenv.cfg
.venv-pc/Scripts/: activate  activate.bat
GUI/: Default.ini  LCr4500.pro  dialog.ui  dlpc350_firmware.cpp  dlpc350_firmware.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GUI/hidapi-master/windows/: hid.c
captures/codex_verify/codex_dryrun/: hdr_merge_report.json  scan_log.csv  scan_log.json
captures/codex_verify/final_only_policy/: hdr_merge_report.json  scan_log.csv  scan_log.json
captures/scan_20260702_134327/: scan_log.csv  scan_log.json
synthetic_pcb_structured_light/: .gitignore  README.md  pyproject.toml
synthetic_pcb_structured_light/assets/optional_component_masks/: README.md
synthetic_pcb_structured_light/configs/: default.yaml  synthetic_decoder_calibration.json
synthetic_pcb_structured_light/docs/: non_planar_calc_improvement_prompt.md
synthetic_pcb_structured_light/src/synthetic_pcb_sl/: __init__.py  cli.py  dataset.py  geometry.py  pattern_loader.py  pcb_scene.py  projector.py  renderer.py  sensor.py  validation.py
synthetic_pcb_structured_light/tests/: test_pattern_loader.py  test_scene_and_render.py  test_validation.py
(+9 files in other folders)
