[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-pcb-structured-light"
version = "0.1.0"
description = "Deterministic synthetic structured-light PCB dataset generator"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0",
  "opencv-python>=4.10",
  "scipy>=1.14",
  "imageio>=2.35",
  "Pillow>=10.4",
  "matplotlib>=3.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3"]

[project.scripts]
synthetic-pcb-sl = "synthetic_pcb_sl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
